force-app/main/default/objects/ampi__xx_Fund__c/fields/ampi__xx_Amount_Applied_For__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Amount_Applied_For__c</fullName>
    <description>Sum of all Allocations with the status ‘Applied For’ associated with the fund that have been created for various projects. The value of this field is updated by the flows Fund_Allocations_Rollup and Fund_Allocations_Deletion. All users except Sys Admin will have only Read access to this field via the page layout.</description>
    <label>Amount Applied For</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>