force-app/main/default/objects/ampi__xx_Fund__c/fields/ampi__xx_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Amount_Paid__c</fullName>
    <description>Sum of all Disbursements with the status &apos;Paid&apos; associated with the fund across all projects. The value of this field is updated by the flows Fund_Disbursements_Rollup and Fund_Disbursements_Deletion. All users except System Admin will have only Read access to this field via the page layout.</description>
    <label>Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>