force-app/main/default/objects/ampi__xx_Fund__c/fields/ampi__xx_Status__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Status__c</fullName>
    <description>This field denotes the status of an Allocation. The status value an allocation can have are Applied For, Committed, and Rejected.</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>