force-app/main/default/objects/ampi__xx_Fund__c/fields/ampi__xx_Total_Fund_Amount__c.field-meta.xml
<CustomField>
    <fullName>ampi__xx_Total_Fund_Amount__c</fullName>
    <description>Total amount of money that is available within a fund.</description>
    <label>Total Fund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>